unpackaged/main/default/objects/Template_Images__c/Template_Images__c.object-meta.xml
<CustomObject>
    <label>Template Images</label>
    <nameField>
        <displayFormat>TI-{0000}</displayFormat>
        <label>Template Images Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Templates Images</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>