unpackaged/main/default/objects/Template_Images__c/fields/Email_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_Id__c</fullName>
    <label>Email Template Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>