unpackaged/main/default/objects/Template_Images__c/fields/Image_1__c.field-meta.xml
<CustomField>
    <fullName>Image_1__c</fullName>
    <label>Image 1</label>
    <type>Url</type>
</CustomField>