unpackaged/main/default/objects/Template_Images__c/fields/Image_3__c.field-meta.xml
<CustomField>
    <fullName>Image_3__c</fullName>
    <label>Image 3</label>
    <type>Url</type>
</CustomField>